# music-finder

./: .gitignore  README.md  package-lock.json  pyproject.toml  vercel.json
api/: spotify_refresh.py  test_ping.py
backend/: .gitignore  .vercelignore  instant_llm.py  main.py  musixmatch_scraper.py  requirements.txt  server.py  utils.py  vercel.json
backend/api/: hello_world.py  search-songs.py  search_songs.py  spotify_library.py  spotify_playlist.py  spotify_refresh.py  spotify_search.py  test-simple.py  test_ping.py  update-table.py
backend/search_library/: clients.py  prompts.py  search.py  types.py  web_search.py
backend/search_library/tests/: README.md  __init__.py  test_search.py
env1/: pyvenv.cfg
frontend/: package-lock.json
frontend/app/: constants.ts  fonts.ts  globals.css  layout.tsx  page.tsx  types.ts
frontend/app/api/auth/callback/: route.ts
frontend/app/components/: ChatMessages.tsx  CompressedHeader.tsx  Header.tsx  LyricsDisplay.tsx  ProgressSection.tsx  SearchForm.tsx  SearchResults.tsx  SpotifyPreviewImage.tsx  TokenUsageDisplay.tsx
frontend/app/hooks/: useAuth.ts  useSearch.ts  useTouchPreventHorizontalScroll.ts  useTypingAnimation.ts
frontend/app/musixmatch-test/: page.tsx
frontend/app/test-lyrics/: page.tsx
frontend/app/utils/: colorExtraction.ts  spotify.ts
frontend/music-finder/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/music-finder/app/: layout.tsx  page.tsx
frontend/music-finder/app/playlist/: page.tsx
frontend/public/fonts/: README.md  fonts.css
(+10 files in other folders)
