[project]
name = "music-finder"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "supabase (==2.9.0)",
    "python-dotenv (==1.0.0)",
    "anthropic (>=0.53.0,<0.54.0)",
    "openai (>=1.85.0,<2.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "pytest (==7.4.0)"
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry]
package-mode = false   # use Poetry only as a dep-manager, not a packager

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

